--- a/sweep/infinite_hpo.yaml
+++ b/sweep/infinite_hpo.yaml
@@ -11,23 +11,23 @@ metric:
 
 parameters:
   base_learning_rate:
-    values: [7.5e-5, 1.5e-4, 3e-4]
+    values: [7.5e-5, 1.5e-4, 3e-4] # 1.5e-4
   min_lr_ratio:
-    values: [0.1, 0.01]
+    values: [0.1, 0.01] # 0.1
   beta1:
-    values: [0.9, 0.95]
+    values: [0.9, 0.95] # 0.95
   beta2:
-    values: [0.95, 0.99]
+    values: [0.95, 0.99] # 0.99
   weight_decay:
-    values: [5e-2, 5e-3]
+    values: [5e-2, 5e-3] # 5e-3
   warmup_ratio:
-    values: [0.05]
+    values: [0.05] # 0.05
   cooldown_ratio:
-    values: [0.3 , 0.4, 0.5]
+    values: [0.3 , 0.4, 0.5] # 0.5
   constant_lr_ratio:
-    values: [0.25, 0.5, 0.75]
+    values: [0.25, 0.5, 0.75] # 0.5
   constant_ratio:
-    values: [0.8]
+    values: [0.8] # 0.8
   name:
     values: ['infinite_hpo']
   output_dir:
